<resources>
    <string name="app_name">RecipeHub</string>
    <string name="start_button">Get Started</string>
    <string name="enter_username">Enter username</string>
    <string name="welcome">Welcome</string>
    <string name="to_the_RH">to the RecipeHub</string>
    <string name="string1">Where you can find the best recipes and tips to enjoy a culinary experience</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="hello_recipe_fragment">Hello recipe fragment</string>
    <string name="home">Home</string>
    <string name="recipes">Recipes</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>

    <string name="creatorInfo">Created by: Siko Szabolcs 2023</string>
    <string name="WelcomeScreenMessage1">Welcome</string>
    <string name="WelcomeScreenMessage2">to the RecipeHub</string>
    <string name="WelcomeScreenDescription">Where you can find the best recipes and tips to enjoy a culinary experience</string>
    <string name="StartButtonText">Get started</string>

    <string name="HomeMenuTitle">Home</string>
    <string name="RecipeMenuTitle">Recipe</string>
    <string name="ProfileMenuTitle">Profile</string>

    <string name="RattingWord">Rating:</string>
    <string name="DetailsWord">DETAILS</string>
    <string name="AddToWishList">ADD TO WISHLIST</string>
    <string name="AddNewRecipe">Add new Recipe</string>

    <string name="TitleString">Title</string>
    <string name="DescriptionString">Description</string>
    <string name="PictureURLString">Picture URL</string>
    <string name="CookTimeString">Cook Time (Minutes)</string>

    <string name="Ingredients">Ingredients</string>
    <string name="Add">Add</string>
    <string name="Instructions">Instructions</string>

    <string name="SaveRecipe">Save Recipe</string>

    <string name="Delete">Delete</string>
    <string name="CreatedAt">Created at: </string>

    <string-array name="sort_options">
        <item>Sort By:</item>
        <item>Price Asc</item>
        <item>Price Desc</item>
        <item>Rating</item>
        <item>Total Time Asc</item>
        <item>Total Time Desc</item>
    </string-array>

</resources>