<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context=".ui.recipe.NewRecipeFragment">

        <EditText
            android:id="@+id/recipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/TitleString"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/recipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/DescriptionString"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="12dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/recipePictureUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/PictureURLString"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="12dp"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/recipeCookTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/CookTimeString"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="12dp"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ingredients"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/ingredientsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/addIngredientsButton"
                android:text="@string/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:padding="0dp"
                android:layout_gravity="center"
                />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Instructions"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/addInstructionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/addInstructionButton"
                android:text="@string/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:padding="0dp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <Button
            android:id="@+id/saveRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SaveRecipe"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="120dp"
            />

    </LinearLayout>
</ScrollView>